# bevy_gp1

./: Cargo.toml
ball-game/src/: main.rs
lab2/: Cargo.toml
lab2/src/: main.rs
lab3/: Cargo.toml  README.md
lab3/src/: config.rs  enemy.rs  environment.rs  main.rs  player.rs  stars.rs
lab4/src/: config.rs  enemy.rs  environment.rs  main.rs  player.rs  stars.rs
lab6/: Cargo.toml
lab6/src/: main.rs  player.rs  prelude.rs
milestones/: '  Cargo.toml
milestones/assets/ldtk/: AdvancedAutoLayers.ldtk  BasicLevel.ldtk  Test.ldtk
milestones/src/: cam.rs  enemy.rs  main.rs  player.rs  prelude.rs  stars.rs  tilemap.rs  ui.rs
src/: main.rs
