[package]
name = "milestones"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.3"
anyhow = "1.0.75"
bevy = { version = "0.11.3", features = ["dynamic_linking", "wayland"] }
bevy-inspector-egui = "0.19.0"
bevy_asset_loader = { version = "0.17.0", features = ["2d"]}
bevy_ecs_ldtk = "0.8.0"
bevy_ecs_tilemap = "0.11.0"
ldtk_rust = "0.6.0"
log = "0.4.20"
rand = "0.8.5"
seldom_pixel = "0.4.0"
serde_json = "1.0.107"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
